# physicalAI-humanoid-robotics

./: .gitignore
.github/workflows/: deploy-docusaurus.yml
backend/: README.md  main.py  pyproject.toml  run_retrieval_tests.py
backend/data/: agent_test_cases.json  retrieval_test_cases.json
backend/src/: agent_tools.py  chunking.py  docusaurus_scraper.py  embedding.py  models.py  rag_agent.py  retrieval_service.py  validation.py  vector_db.py
backend/src/utils/: config.py  decorators.py  test_data_loader.py
backend/tests/: test_api.py
book/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
book/docs/: capstone-appendix.md  glossary.md  hardware-appendix.md  preface.md  references.md
book/plugins/: inject-env-plugin.js
history/adr/: 0001-undefined-project-constitution.md  0002-project-structure-and-tooling-choice.md  0003-rag-pipeline-technology-stack-selection.md  0004-semantic-chunking-strategy-for-docusaurus-content.md  0005-external-content-acquisition-strategy-for-docusaurus.md  0006-rag-retrieval-pipeline-core-technology-stack.md  0007-rag-retrieval-evaluation-strategy.md  0008-qdrant-querying-mechanism-for-pre-embedded-vectors.md  0009-fastapi-backend-framework-and-api-design.md  0010-rag-agent-orchestration-and-llm-integration.md  0011-retrieval-tool-integration-and-strict-grounding-strategy.md
history/prompts/: 005-create-rag-agent-backend-spec.spec.prompt.md  005-create-rag-retrieval-pipeline-spec.spec.prompt.md
specs/001-robotics-book-spec/: book-layout.json  capstone-appendix.mdx  data-model.md  glossary.mdx  (+10 more)
(+115 files in other folders)
